app/assets/stylesheets/woods/binarywoods.css.scss
/*
 *= require ../main.css.scss
 */

@import '../colormind';

body {
  color: $dark-gray;
}

a {
  color: $dark-purple;
  text-decoration: none !important;
}

.background {
  background: rgb(182,181,227); /* Old browsers */
  background: -moz-linear-gradient(left, rgba(182,181,227,1) 0%, rgba(102,100,192,1) 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(left, rgba(182,181,227,1) 0%,rgba(102,100,192,1) 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to right, rgba(182,181,227,1) 0%,rgba(102,100,192,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */

  // SLATE
  // background: rgb(0,0,0); /* Old browsers */
  // background: -moz-linear-gradient(right, rgba(0,0,0,1) 0%, rgba(184,220,227,1) 100%); /* FF3.6-15 */
  // background: -webkit-linear-gradient(right, rgba(0,0,0,1) 0%,rgba(184,220,227,1) 100%); /* Chrome10-118,Safari5.1-6 */
  // background: linear-gradient(to left, rgba(0,0,0,1) 0%,rgba(184,220,227,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}

#binaryheader {
  width: 100%;
  background: $white;
}

#woods-wrapper {
  width:      940px;  // gotta be this big for tree editor
  margin-left:    auto;
  margin-right:   auto;
  padding-top:    0;
  padding-bottom: 50px;
  padding-left:   0;
  padding-right:  0;
}

.panel {
  box-shadow: 0 0 10px $shadow-gray;
  z-index: 0;
  background: $white;
}

#nodepanel, #findpanel {
  width: 600px;
}

.pane {
  padding: 10px;
  opacity: 1;
}

.woods-box {
  width: 60%;
  padding: 5px;
  border: 1px solid $shadow-gray;
  margin: 10px 0 10px 0;
  background-color: $cloud-blue;
}

.binary-button {
  border-radius: 10px;
  border: 0px solid;
  min-height: 80px;
  font-size: 125%;
  min-width: 40%;
  cursor: pointer;
}

.minory-button {
  border-radius: 10px;
  border: 0px solid;
  min-height: 20px;
  min-width: 80px;
  cursor: pointer;
  margin-bottom: 5px;
  margin-left: 100px;
  color: $white;
  background-color: $black;
}

.bright-button {
  border-radius: 40px;
  min-height: 80px;
  font-size: 125%;
  cursor: pointer;
  background-color: $cloud-blue;
  border: 1px solid $black;
  margin-top: 10px;
}

.minory-button:disabled {
  color: $light-gray;
}

.lineheight-spacer {
  margin: 1em 0;
  line-height: 120%;
}

.woods-table {
  border-spacing: 0;
  border: 3px solid $black;
  width: 30%;
  padding: 0;
  tr { padding: 0; }
  tr:nth-child(odd)  { background-color: $smoke-gray; }
  tr:nth-child(even) { background-color: $alt-smoke-gray; }
  th { background-color: $white;
       padding: 5px; }
  td { padding: 5px;
       margin: 0; }
  border-radius: 5px;
}

.item-selectbox {
  height: 250px;
}

.colourbox {
  font-size: 125%;
  border: 0px solid;
  border-radius: 5px;
  margin: 5px;
}

#colourtest {
  width: 500px;
}

#colouredpanel {
  border: 0px solid;
  border-radius: 5px;
  margin: 5px;
  width: 500px;
  padding: 10px;
}

#woods-spacer {
  height: 425px;
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}

#highscore-table {
  td {
    width: 50%;
  }
  border: 1px solid $black;
  border-radius: 20px;
  text-align: center;
  background-color: $mega-pink;
  width: 300px;
  padding-bottom: 20px;
}

#story-pane {
  p {
    white-space: pre-line;
  }
}

#storyinfopanel {
  margin-top: 20px;
  border: 1px solid $black;
  border-radius: 20px;
  text-align: center;
  background-color: $mega-blue;
  width: 300px;
  padding-bottom: 6px;
}

#woods-player-display-panel {
  border: 1px solid $black;
  margin: 20px auto 0 auto;
  border-radius: 20px;
  text-align: left;
  background-color: $mega-blue;
  width: 600px;
  padding: 15px;
}

.player-stats-table {
  text-align: center;
}

.player-finds-table {
  background-color: lighten($mega-blue, 5%);
  text-align: left;
  margin: 20px auto 0 auto;
  border: 1px solid $black;
  border-radius: 10px;
  padding: 10px;

  tr:nth-child(odd)  {
    td {

    }
  }
  tr:nth-child(even) {
    td {

    }
  }

}

.megapink {
  color: $mega-pink;
  text-decoration: underline !important;
}

.megablue {
  color: $mega-blue;
  text-decoration: underline !important;
}

.blackscore {
  color: $black;
  text-decoration: underline !important;
}


/////  TREE EDITOR

#node-editor {
  display: inline-block;
  width: 300px;
  vertical-align: top;
}

#tree-map {
  display: inline-block;
  width: 550px;
  vertical-align: top;
}

#tree-controls {
  margin-top: 10px;
}

#primary-controls, #alt-tree-controls, #error-console-wrapper {
  text-align: center;
  width: 160px;
  display: inline-block;
  vertical-align: top;
}

#error-console-wrapper {
  width: 300px;
}

.woods-text {
  border: 1px solid $black;
  border-radius: 4px;
  padding: 3px;
}

.editor-button {
}

.map-row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
}

.map-cell {
  border: 1px solid $black;
  border-radius: 4px;
  width: 120px;
  height: 55px;
  margin: 10px;
  text-align: center;
  cursor: pointer;
  vertical-align: middle;
  background-color: $white;
}

.highlighted-cell {
  background-color: $cloud-blue !important;
}

.spacer {
  margin: 0 30px;
}

#left-parent-spacer, #right-parent-spacer {
  display: none;
  margin: 0 100px;
}

.map-cell-text {
  margin-top: 20px;
}

.right-side-editor {
  display: inline-block;
}

#parent-button, #left-button, #right-button, #slide-left-button, #slide-right-button {
  border-radius: 10px;
  background-color: $white;
}

#parent-button {
  font-size: 1.5em;
  width: 125px;
}

#left-button, #right-button {
  font-size: 1.5em;
  height: 40px;
}

#slide-left-button, #slide-right-button {
}

#treelink-box, #box-box, #possibleitem-box, #paintball-box {
  border: 1px solid $black;
  border-radius: 10px;
  padding: 5px;
  margin: 5px 0;
}

#treelink-box {
  background-color: $ghost-green;
}

#box-box {
  background-color: $slate-purple;
}

#possibleitem-box {
  background-color: $honey-yellow;
}

.df-image {
  border-radius: 30px;
  border: 0px solid;
}

#df-col1 {
  display: inline-block;
}

#df-col2 {
  display: inline-block;
}

/////////

// STILL P. BIG
@media screen and (max-width: 1040px) {
  .header-words {
    display: none;
  }

  #woods-wrapper {
    width: 750px;
  }

  .df-image {
    height: 330px;
    width: 550px;
  }

}

// SOMEWHAT SMALL
@media screen and (max-width: 800px) {
  #woods-wrapper {
    width:      550px;
  padding-left:   10px;
  padding-right:  10px;
  }

  .df-image {
    height: 300px;
    width: 500px;
  }

  #nodepanel, #findpanel {
    width: 500px;
  }

  #df-col1 {
    display: block;
    margin-top: 20px;
  }
  #df-col2 {
    display: block;
  }
}

// THE VERY SMALLEST
@media screen and (max-width: 600px) {
  #woods-wrapper {
    width: 360px;
    padding-left:   0;
    padding-right:  0;
  }
  .df-image {
    height: 216px;
    width: 360px;
  }

  #nodepanel, #findpanel {
    width: 360px;
  }
  #statspanel {
    margin-top: 20px;
  }
  // text
  #story-pane {
    p {
      font-size: 80%;
    }
  }
  #item-desc {
    font-size: 80%;
  }
  .binary-button {
    font-size: 90%;
    min-height: 40px;
  }
  #left-button, #right-button {
    font-size: 1em;
  }

}

